# temp-surf

./: .gitignore  README.md  environment.yml  pyproject.toml  sync.sh
data/: fuse.sh
data/output/gilbreth/: slurm_job_id.txt
data/output/gilbreth/logs/: slurm-11132795.err  slurm-11132795.out
docs/: comp.md  multi_machine.md
notebooks/: results.ipynb
notebooks/.ipynb_checkpoints/: eurocropsml-checkpoint.ipynb  results-checkpoint.ipynb
notebooks/benchmarks/: breizhcrops.ipynb  cropharvest.ipynb  eurocropsml.ipynb  pastis.ipynb
notebooks/benchmarks/.ipynb_checkpoints/: breizhcrops-checkpoint.ipynb  cropharvest-checkpoint.ipynb  eurocropsml-checkpoint.ipynb
notebooks/eda/: eurocropsml.ipynb  sickle.ipynb  yieldsat.ipynb
notebooks/eda/.ipynb_checkpoints/: cropharvest-checkpoint.ipynb  eurocropsml-checkpoint.ipynb  sickle-checkpoint.ipynb
notebooks/eda/benchmarks/: breizhcrops.ipynb  cropharvest.ipynb  eurocropsml.ipynb  pastis.ipynb
notebooks/eda/models/: agrifm.ipynb  galileo.ipynb  olmoearth.ipynb  presto.ipynb  tessera.ipynb
notebooks/models/: agrifm.ipynb  galileo.ipynb  olmoearth.ipynb  presto.ipynb  tessera.ipynb
notebooks/models/.ipynb_checkpoints/: agrifm-checkpoint.ipynb  galileo-checkpoint.ipynb  olmoearth-checkpoint.ipynb  presto-checkpoint.ipynb  tessera-checkpoint.ipynb
src/: main.py
src/dataio/: get_input.py  inspection.py  koppen.py
src/diagnostics/: interp.py
src/evals/: compat.py  confounds.py  contrasts.py  evals.py  label_access.py  metrics.py  partition.py  probes.py  regional_screening.py  rescore_calibration.py  selective_prediction.py  split_artifacts.py  split_spec.py
src/evals/benchmarks/: breizhcrops.py  cropharvest.py  eurocropsml.py  pastis.py  pastis_r.py
src/evals/protocol/: probes.py  splits.py
src/evals/regimes/: base.py  climate_ood.py  geographic_ood.py  grouped_ood.py  hybrid_ood.py  official.py  phenology_ood.py  random_id.py  spatial_cluster_ood.py  temporal_ood.py
src/evals/tasks/: bin_crop_class.py  breizh_crop_class.py  crop_class.py  pastis_crop_seg.py  pheno_reg.py  yield_reg.py
src/methods/: dfr.py  grit.py  tent.py
src/models/: agrifm.py  galileo.py  olmoearth.py  presto.py  raw.py  tessera.py
src/tests/: conftest.py  smoke_encoders.py  smoke_models.py  smoke_pastis.py  smoke_pastis_r.py  splitfix.py  test_artifact_integrity.py  test_audit_fixes.py  test_benchmark_cache.py  test_cache_metadata.py  test_calibration_support.py  test_contrasts.py  test_cropharvest_metadata.py  test_dataio.py  test_dense_manifest.py  test_embedding_manifest.py  test_erm_characterization.py  test_eurocropsml_metadata.py  test_evals.py  test_geographic_delta_schema.py  test_golden_spatial_block_split.py  test_interp.py  test_label_access.py  test_label_access_completion.py  test_label_access_dense.py  test_label_access_migration.py  test_label_access_runtime.py  test_label_access_sweep.py  test_lodo_cropharvest.py  test_main_config.py  test_methods.py  test_migration_tools.py  test_models.py  test_native_preprocessing.py  test_partition.py  test_pastis_metadata.py  test_probe_cap.py  test_regime_contract.py  test_regime_geographic.py  test_regime_official.py  (+10 more)
src/tests/fixtures/: cropharvest_spatial_block_golden.json
src/utils/: agrifmutils.py  artifacts.py  cacheutils.py  galileoutil.py  gputils.py  ioutils.py  perf.py  perfutils.py  runstate.py
src/utils/models/: agrifmutils.py  galileoutil.py
tools/: adopt_embeddings.py  audit_cropharvest_geography.py  audit_embedding_cache.py  generate_splits.py  migrate_label_access.py  preflight_dataset_digests.py
viz/: aggregate_ci.py  make_figures.py  validate_rescore.py
