[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "robustness"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "breizhcrops==0.0.4.1",
    "einops",
    "earthengine-api",
    "geopandas",
    "h5py",
    "huggingface-hub",
    "hurry-filesize",
    "joblib",
    "mmengine",
    "numpy>=1.26,<2",
    "olmoearth-pretrain",
    "openmapflow",
    "scikit-learn",
    "thop",
    "timm",
    "torch==2.7.1",
    "torchvision==0.22.1",
    # NOTE: presto is intentionally NOT a uv-resolved dependency. Upstream presto pins a wall of
    # stale exact versions (torch==2.0, numpy==1.23.5, einops==0.6.0, ...) that conflict with this
    # project and with olmoearth. It is installed `--no-deps` from git after `uv sync`.
    "webdataset",
    "xarray",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]
notebooks = [
    "ipykernel",
    "jupyter",
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]
extend-exclude = [
    "notebooks",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.uv]
package = true
# breizhcrops' transitive resolution pulls h5py 3.6.0, which has NO CPython 3.11 wheel (only
# <=3.10), so `uv sync --frozen` would try to source-build it against a missing HDF5 lib. Force a
# version that ships a cp311 wheel.
override-dependencies = ["h5py>=3.11"]
# Lock only for the platforms we actually run on (Linux x86_64 = cranberry, macOS arm64 = dev),
# so resolution isn't blocked by irrelevant splits (e.g. win32 ARM64).
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
# breizhcrops resolves from PyPI (0.0.4.1 == the version in the working env). The old git
# pin (rev 9b58ae5) was unresolvable, so it never appeared in uv.lock and `uv sync --frozen` failed.
olmoearth-pretrain = { git = "https://github.com/allenai/olmoearth_pretrain.git", rev = "0e11e448946f8ca259593435194e9faa14a58c77" }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
