[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "robustness"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
    "breizhcrops==0.0.4.1",
    "einops",
    "earthengine-api",
    "geopandas",
    "h5py",
    "huggingface-hub",
    "hurry-filesize",
    "joblib",
    "mmengine",
    # NUMERICAL CORE -- pinned exactly, not for currency but for COMPARABILITY. Every probe number
    # in the canonical output-erm-full-20260711 run was produced under these versions on all five
    # participating boxes (dewberry was explicitly upgraded off scikit-learn 1.7.2 before it ran).
    # scikit-learn drives LogisticRegression/MLPClassifier numerics and is NOT part of the run
    # signature, so a drift here silently changes published results with nothing to catch it.
    # Loosening any of these means recomputing the canonical probing results under the new
    # versions -- never just re-resolving. scipy was previously undeclared and arrived transitively
    # via scikit-learn, which is how the dev machine ended up on 1.15.3 against the boxes' 1.17.1.
    "numpy==1.26.4",
    "scipy==1.17.1",
    "scikit-learn==1.9.0",
    "olmoearth-pretrain",
    "openmapflow",
    # pyproj is imported DIRECTLY by evals.benchmarks.pastis to transform PASTIS EPSG:2154
    # (Lambert-93) patch coordinates to EPSG:4326; declared here rather than relied on transitively.
    "pyproj",
    "thop",
    "timm",
    "torch==2.7.1",
    "torchvision==0.22.1",
    # NOTE: presto is intentionally NOT a uv-resolved dependency. Upstream presto pins a wall of
    # stale exact versions (torch==2.0, numpy==1.23.5, einops==0.6.0, ...) that conflict with this
    # project and with olmoearth. It is installed `--no-deps` from git after `uv sync`.
    "webdataset",
    "xarray",
]

[project.optional-dependencies]
dev = [
    "mypy",
    "pytest",
    "ruff",
]
viz = [
    "matplotlib",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["src/tests"]
python_files = ["test_*.py"]

[tool.uv]
package = true
# breizhcrops' transitive resolution pulls h5py 3.6.0, which has NO CPython 3.11 wheel (only
# <=3.10), so `uv sync --frozen` would try to source-build it against a missing HDF5 lib. Force a
# version that ships a cp311 wheel.
override-dependencies = ["h5py>=3.11"]
# Lock only for the platforms we actually run on (Linux x86_64 = cranberry, macOS arm64 = dev),
# so resolution isn't blocked by irrelevant splits (e.g. win32 ARM64).
environments = [
    "sys_platform == 'linux' and platform_machine == 'x86_64'",
    "sys_platform == 'darwin' and platform_machine == 'arm64'",
]

[tool.uv.sources]
# breizhcrops resolves from PyPI (0.0.4.1 == the version in the working env). The old git
# pin (rev 9b58ae5) was unresolvable, so it never appeared in uv.lock and `uv sync --frozen` failed.
olmoearth-pretrain = { git = "https://github.com/allenai/olmoearth_pretrain.git", rev = "0e11e448946f8ca259593435194e9faa14a58c77" }
torch = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]
torchvision = [
    { index = "pytorch-cpu", marker = "sys_platform != 'linux'" },
    { index = "pytorch-cu128", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.mypy]
explicit_package_bases = true
mypy_path = "src"
